--- a/8.module/1.index.md
+++ b/8.module/1.index.md
@@ -26,4 +26,22 @@ node 编译后的二进制文件，不需要再编译，直接使用
 2.如果没有. / . 
    1.这是核心模块 http
    2.第三方模块
-   
+3.第三方模块的查找规则   
+#模块管理
+##模块的安装
+- 本地安装
+npm install mime
+本地库
+- 全局安装
+npm install mime -g
+可执行文件
+npm install -g express-generator
+
+mkdir zhufengpeixun
+cd zhufengpeixun
+npm init
+创建index.js文件
+npm publish
+https://www.npmjs.com/
+
+
