删除一个非空目录

--- a/8.module/1.index.md
+++ b/8.module/1.index.md
@@ -36,12 +36,43 @@ npm install mime
 npm install mime -g
 可执行文件
 npm install -g express-generator
-
+#创建文件夹
 mkdir zhufengpeixun
+##进入文件夹
 cd zhufengpeixun
+#初始化包管理文件
 npm init
-创建index.js文件
+#创建index.js文件
+#创建用户
+    npm adduser
 npm publish
 https://www.npmjs.com/
+
+搜索项目
+npm search zhufengpeixun
+#查看项目的信息
+npm view zhufengpeixun
+#查看全局安装目录 
+npm root -g
+#配置文件
+用户的配置
+ C:\Users\Administrator\npmrc
+全局配置
+ C:\Program Files\nodejs\node_modules\npm\npmrc
+ prefix=${APPDATA}\npm
+#查看本地安装的所有模块
+npm list
+npmlist -g
+##取消本地安装的模块
+npm uninstall zhufengpeixun
+#更新本地安装的所有模块
+npm update
+npm update zhufengpeixun
+#安装指定模板
+npm install zhufengpeixun@2.0.0
+#保存所有的记录
+doskey /history
+
+
 
 
